# cr-search

./: .gitignore  app.py  benchmark.py  colors.py  complete.py  config.py  config.sample.py  createdb.py  data.py  fetch.py  gunicorn.py  import.py  index.py  main.py  models.py  mypy.ini  optimize.py  phrases.py  psqlsearch.py  pyproject.toml  search.py  server.py  ssr.py  stats.py  stopwords.py  subtitlewrapper.py  suggestions.py  tests.sql  typo.py  typo_find.py  upload.sh  utils.py  web-export.py
templates/: header.html
web/: package-lock.json  package.json  tslint.json  vue.config.js
web/fonts/: README.md
web/public/: index.html
web/src/: App.vue  _autocomplete.scss  _colors.scss  _fonts.scss  _popups.scss  _videoframe.scss  custom.scss  index.d.ts  interfaces.ts  main.ts  router.ts  utils.ts  vue-matomo.d.ts
web/src/assets/: README.md
web/src/components/: CheckMark.vue  Intro.vue  SeriesSelector.vue
web/src/views/: Episodes.vue  Home.vue  Transcript.vue
