[tool.poetry]
name = "cr-search"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.8"
peewee = "^3.13.1"
srt = "^3.0.0"
psycopg2 = "^2.8.4"
spacy-nightly = "^3.0.0-rc.2"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.0.0a0/en_core_web_md-3.0.0a0.tar.gz"}
flask = "^1.1.1"
sentry_sdk = "^0.19.3"
gunicorn = "^20.0.4"
alive-progress = "^1.4.1"
youtube_dl = "^2021.1.3"
setproctitle = "^1.2.1"
sentry-sdk = {extras = ["flask"], version = "^0.19.5"}
blinker = "^1.4" # tmp workaround to make flask-sentry work

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
