[tool.poetry]
name = "cr-search"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.13.1"
srt = "^3.0.0"
psycopg2 = "^2.8.4"
spacy = "^3.5.0"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.5.0/en_core_web_md-3.5.0.tar.gz"}
flask = "^2.0.0"
gunicorn = "^20.0.4"
alive-progress = "^3.0.1"
youtube_dl = "^2021.1.3"
setproctitle = "^1.2.1"
sentry-sdk = {extras = ["flask"], version = "^1.0.0"}
blinker = "^1.4" # tmp workaround to make flask-sentry work
Flask-Caching = "^2.0.0"
redis = "^4.0.2"
prettytable = "^3.0.0"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
